src/Pages/IndividualCloset.css
.infocontainer {
    display: flex;
    justify-content: space-evenly;
}

.imagescontainer {
    display: flex;
    padding: 5%;
    padding-top: 5%;
    justify-content: space-between;
    flex-wrap: wrap;
    gap: 10px;
}

.itemImage {
    width: 100px;
    height: 100px;
    border-radius: 10%;
    border: 1px solid #000;
}

.itemCard {
    display: flex;
    flex-direction: column;
    align-items: center;
    margin: 10px;
    text-align: center;
  }

  .detailsButton {
    margin-top: 8px;
    font-size: 0.85rem;
    width: 100%;
  }

.itemImage.selected {
    border: 3px solid #DF8EC1; 
    transform: scale(0.98);
}

.pinkButton {
    background-color: #DF8EC1;
    border-color: #DF8EC1;
    color: #fff;
}
  
  .pinkButton:hover {
    background-color: #af7095;
    border-color: #af7095;
    color: #fff;
}

  

